flux/infrastructure/base/kopiur/config/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopiur-ui-external
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: external-kopia-ui
          port: 51515
